--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.username=your_mysql_user
 spring.datasource.password=your_mysql_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+spring.security.oauth2.client.registration.github.clientId=cc1735a8627dd1919c34
+spring.security.oauth2.client.registration.github.clientSecret=2651f91984725734314f7a45466e162dfc0809ff
+spring.security.oauth2.client.registration.github.redirectUri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.provider.github.authorizationUri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.tokenUri=https://github.com/login/oauth/access_token
+spring.security.oauth2.client.provider.github.userInfoUri=https://api.github.com/user
+spring.security.oauth2.client.provider.github.userNameAttribute=id
