--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
+        <!-- Spring Security : nt working -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
         <!-- Spring Data JPA Dependency -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -35,6 +41,8 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>
         </dependency>
+        <!-- Spring Oauth2 not working... -->
+
 
         <!-- Spring Boot Test Dependencies -->
         <dependency>
